# summarize-polish-legal-docs

./: .gitignore  README.md  data_preprocess.py  evaluate_models.py  extract_summaries.py  metrics.py  model_preparer.py  pyproject.toml
analysis/: README.md  dokumenty.md  dostępne_modele_LLM.md  info.txt  literatura_i_analiza_dziedziny.md  wymagania_i_wstepny_projekt.md
inference/: bielik.py  commandr7.py  gemma.py  llama.py  llama2-32k.py  qwen.py  qwen3.py
training/: utils.py
training/prompt_tuning/: test_models.py  train_models.py  train_prompt_tuning.sh  training.py  training_gemma.py
training/qlora/: test_models.py  train_gemma.py  train_models.py  train_qlora.sh  training.py
